--- a/package.json
+++ b/package.json
@@ -11,5 +11,6 @@
     "grunt-contrib-jshint": "~1.0.0",
     "grunt-contrib-uglify": "~2.0.0",
     "load-grunt-tasks": "~3.5.2"
-  }
+  },
+  "dependencies": {}
 }
